Implemented frontend components for Work Experience section

--- a/docs-web/src/main/webapp/src/locale/en.json
+++ b/docs-web/src/main/webapp/src/locale/en.json
@@ -74,6 +74,11 @@
     "graduation_date": "Graduation date",
     "major": "Major",
     "gpa": "GPA",
+    "company_name": "Company Name",
+    "title_name": "Job Title",
+    "job_description": "Job Description",
+    "start_date": "Start Date",
+    "end_date": "End Date",
     "subject": "Subject",
     "identifier": "Identifier",
     "publisher": "Publisher",
