--- a/docs-web/src/main/webapp/src/locale/en.json
+++ b/docs-web/src/main/webapp/src/locale/en.json
@@ -71,6 +71,11 @@
     "language": "Language",
     "creation_date": "Creation date",
     "gpa": "GPA",
+    "company_name": "Company Name",
+    "title_name": "Job Title",
+    "job_description": "Job Description",
+    "start_date": "Start Date",
+    "end_date": "End Date",
     "subject": "Subject",
     "identifier": "Identifier",
     "publisher": "Publisher",
@@ -166,7 +171,8 @@
       "publisher_placeholder": "An entity responsible for making the resource available",
       "format_placeholder": "The file format, physical medium, or dimensions of the resource",
       "source_placeholder": "A related resource from which the described resource is derived",
-      "uploading_files": "Uploading files..."
+      "uploading_files": "Uploading files...",
+      "work_experience": "Work Experience"
     },
     "default": {
       "upload_pending": "Pending...",
