Fixed education section display formatting by adding ng-model to tags

--- a/docs-web/src/main/webapp/src/locale/en.json
+++ b/docs-web/src/main/webapp/src/locale/en.json
@@ -66,7 +66,7 @@
     "shared": "Shared",
     "current_step_name": "Current step",
     "title": "Title",
-    "universityname": "University Name",
+    "university_name": "University Name",
     "description": "Description",
     "contributors": "Contributors",
     "language": "Language",
